small cleanup of hyphen stripping